# grayshield

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: example.yaml
data/: HF_DATASET_CARD.md  README.md  download_from_hf.py  download_paper_payloads.py
docs/: grayshield_pipeline.tex
grayshield/: __init__.py  cli.py  config.py
grayshield/defense/: __init__.py  finetune.py  gaussian_noise.py  gray_code.py  pattern_mask.py  ptq.py  random_flip.py  swp.py
grayshield/experiments/: __init__.py  runner.py
grayshield/lsb/: __init__.py  bits.py  stego.py
grayshield/metrics/: __init__.py  model.py  pareto.py  payload.py
grayshield/models/: __init__.py  checkpoint.py  factory.py  targets.py  tasks.py
grayshield/payload/: __init__.py  encoding.py  loader.py  malwarebazaar.py  reed_solomon.py
grayshield/stats/: __init__.py  bootstrap.py
grayshield/utils/: hashing.py  logging.py  seed.py
grayshield/visualization/: __init__.py  plots.py  rq1.py  rq2.py  rq3.py  rq4.py
release_results/: README.md  artifact_sources.json
release_results/rq1/: rq1.json  rq1.jsonl
release_results/rq2/: rq2.json  rq2.jsonl
release_results/rq3/: rq3.json  rq3.jsonl  rq3_new_metrics_summary.md  summary.json  table1_defense_comparison.md  table1_defense_comparison.tex  table2_attacker_robustness.md  table2_attacker_robustness.tex
release_results/rq4/: rq4.jsonl  rq4_operating_points.csv
scripts/: experiments.sh  exps.sh  generate_camera_ready_figures.py  generate_tables.py  smoke_test.sh
scripts/figures/: README.md  gs_RQ1.py  gs_RQ2.py  gs_RQ3.py  gs_RQ4.py  gs_appendix_defense_tradeoff.py
