[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grayshield"
version = "1.0.0"
description = "GrayShield: Gray-Code-Guided Bit-Level Sanitization for Transformer Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anonymous Authors"},
]
maintainers = [
    {name = "Anonymous Maintainers", email = "anonymous@example.com"},
]
keywords = [
    "security",
    "machine-learning",
    "steganography",
    "transformers",
    "defense",
    "gray-code",
    "LSB",
    "model-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.1",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "transformers>=4.41",
    "datasets>=2.19",
    "Pillow>=10.0",
    "requests>=2.28",
    "pyzipper>=0.3.6",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/anonymousgrayshield/grayshield"
Repository = "https://github.com/anonymousgrayshield/grayshield"
Documentation = "https://github.com/anonymousgrayshield/grayshield#readme"
"Bug Tracker" = "https://github.com/anonymousgrayshield/grayshield/issues"

[project.scripts]
grayshield = "grayshield.cli:main"

[tool.setuptools.packages.find]
include = ["grayshield", "grayshield.*"]

[tool.setuptools.package-data]
grayshield = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
